# ai-invention-d8d250-dual-signal-spectrum-based-fault-localiz

./: README.md
chat/messages/: README.md
chat/messages/3_report_results/: 3_gen_full_paper.md
chat/prompts/: README.md
chat/prompts/3_report_results/: 3_gen_full_paper.md
paper_latex/: paper.tex  references.bib
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  demo_result.json
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  build_dataset.py  data.py  data_out.json  data_out_mini.json  data_out_preview.json  full_data_out.json  metadata.json  mini_data_out.json  preview_data_out.json  pyproject.toml
round-1/evaluation-1/: README.md
round-1/evaluation-1/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
round-1/evaluation-1/src/: .terminal_claude_agent_struct_out.json  eval.py  eval_out_partial.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: demo_result.json  (+1 more)
round-1/research-1/: README.md
round-2/evaluation-1/: README.md
round-2/evaluation-1/src/: .terminal_claude_agent_struct_out.json  eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
round-2/experiment-1/: README.md
round-2/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml  test_smoke.py
(+76 files in other folders)
