[project]
name = "dual-sbfl-evaluation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.0",
    "aiosignal==1.4.0",
    "attrs==26.1.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.63.0",
    "frozenlist==1.8.0",
    "idna==3.18",
    "joblib==1.5.3",
    "kiwisolver==1.5.0",
    "loguru==0.7.3",
    "matplotlib==3.10.9",
    "multidict==6.7.1",
    "narwhals==2.22.1",
    "numpy==2.4.6",
    "packaging==26.2",
    "pandas==3.0.3",
    "pillow==12.2.0",
    "propcache==0.5.2",
    "pyparsing==3.3.2",
    "pyswip==0.3.3",
    "python-dateutil==2.9.0.post0",
    "requests==2.34.2",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
]
